--- a/.github/config.yml
+++ b/.github/config.yml
@@ -19,3 +19,5 @@ firstPRMergeComment: >
   Congrats on merging your first pull request! 🎊 We here at "Open Source Contributors JSS" are proud of you!!
 
 # It is recommend to include as many gifs and emojis as possible
+  Congrats on merging your first pull request. We here at "Open Source Contributors JSS" are proud of you....!!!!
+# It is recommended to include as many gifs and emojis as pssible.
